--- a/styles/components/auction-card.css
+++ b/styles/components/auction-card.css
@@ -15,7 +15,7 @@
     scroll-snap-stop: always;
 }
 
-.property-card-home-page:last-child{
+.property-card-home-page:last-child {
     margin-left: 0;
 }
 
@@ -67,7 +67,7 @@
 }
 
 .ended-badge-home-page {
-    background: #1e3d6f;
+    background: #6b46c1;
     color: white;
     border-top-left-radius: 0;
     border-bottom-right-radius: 0;
