--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,7 @@
 @import url('components/settings.css');
 @import url('components/user-fav.css');
 @import url('components/policy-terms.css');
+@import url('components/help-center.css');
 @import url('components/auction-property-detail.css');
 @import url('components/toast-message.css');
 @import url('components/ios-install-guide.css');
