--- a/styles/components/auction-card.css
+++ b/styles/components/auction-card.css
@@ -96,6 +96,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
+    flex: 1;
 }
 
 .property-title-home-page {
@@ -272,7 +273,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 0.2rem;
+    margin-top: auto;
 }
 
 .property-cta-container-home-page>* {
